Remove String.format from exception creation (#1027)
Remove String.format from exception creation